--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
           <a href="./Day01-Expanding Cards/Day1.html">Day01-Expanding Cards</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day02-Progress Steps/Day2.html">Day01-Expanding Cards</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
