--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </li>
       <li>
         <p>
-          <a href="./Day02-Progress Steps/Day2.html">Day01-Expanding Cards</a>
+          <a href="./Day02-Progress Steps/Day2.html">Day02-Progress Steps</a>
         </p>
       </li>
     </ul>
