--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
           <a href="./Day02-Progress Steps/Day2.html">Day02-Progress Steps</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day03-Rotating Navigation/Day3.html"
+            >Day03-Rotating Navigation</a
+          >
+        </p>
+      </li>
     </ul>
   </body>
 </html>
