--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
           >
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day04-Hidden Search Widget/day4.html"
+            >Day03-Rotating Navigation</a
+          >
+        </p>
+      </li>
     </ul>
   </body>
 </html>
