--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <li>
         <p>
           <a href="./Day04-Hidden Search Widget/day4.html"
-            >Day03-Rotating Navigation</a
+            >Day04-Hidden Search Widget</a
           >
         </p>
       </li>
