--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
           >
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day05-Blurry loading/Day5.html">Day05-Blurry loading</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
