--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
           <a href="./Day05-Blurry loading/Day5.html">Day05-Blurry loading</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day06-Scroll Animation/day6.html">Day05-Blurry loading</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
