--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
           <a href="./Day06-Scroll Animation/day6.html">Day05-Blurry loading</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day07-Split Landing Page/day7.html"
+            >Day05-Blurry loading</a
+          >
+        </p>
+      </li>
     </ul>
   </body>
 </html>
