--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
       </li>
       <li>
         <p>
-          <a href="./Day06-Scroll Animation/day6.html">Day05-Blurry loading</a>
+          <a href="./Day06-Scroll Animation/day6.html"
+            >Day06-Scroll Animation</a
+          >
         </p>
       </li>
       <li>
         <p>
           <a href="./Day07-Split Landing Page/day7.html"
-            >Day05-Blurry loading</a
+            >Day07-Split Landing Page</a
           >
         </p>
       </li>
