--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
           >
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day08-Form Wave Animation/day8.html"
+            >Day08-Form Wave Animation</a
+          >
+        </p>
+      </li>
     </ul>
   </body>
 </html>
