--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
           >
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day09-Sound Board/day9.html">Day09-Sound Board</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
