--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
           <a href="./Day09-Sound Board/day9.html">Day09-Sound Board</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day10-Dad Jokes/day10.html">Day10-Dad Jokes</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
