--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
           <a href="./Day10-Dad Jokes/day10.html">Day10-Dad Jokes</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day11-Event KeyCode/day11.html">Day11-Event keyCode</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
