--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
           <a href="./Day11-Event KeyCode/day11.html">Day11-Event keyCode</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day12-FAQ Collapse/day12.html">Day11-Event keyCode</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
