--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </li>
       <li>
         <p>
-          <a href="./Day12-FAQ Collapse/day12.html">Day11-Event keyCode</a>
+          <a href="./Day12-FAQ Collapse/day12.html">Day12-FAQ Collapse</a>
         </p>
       </li>
     </ul>
