--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
           <a href="./Day12-FAQ Collapse/day12.html">Day12-FAQ Collapse</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day13-Random Choice/day13.html">Day13-Random Choice</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
