--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
           <a href="./Day13-Random Choice/day13.html">Day13-Random Choice</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day14-Animated Navigation/day14.html"
+            >Day14-Animated Navigation</a
+          >
+        </p>
+      </li>
     </ul>
   </body>
 </html>
