--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
           >
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day15-Increment Counter/day15.html"
+            >Day15-Increment Counter</a
+          >
+        </p>
+      </li>
     </ul>
   </body>
 </html>
