--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
           >
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day16-Drink Water/day16.html">Day16-Drink Water</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
