--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
           <a href="./Day17-Movie App/day17.html">Day17-Movie App</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day18-Background Slider/day18.html"
+            >Day18-Background Slider</a
+          >
+        </p>
+      </li>
     </ul>
   </body>
 </html>
