--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
           >
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day19-Theme Clock/day19.html">Day19-Theme Clock</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
