--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
           <a href="./Day19-Theme Clock/day19.html">Day19-Theme Clock</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day20-Button Ripple/day20.html">Day20-Button Ripple</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
