--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
           <a href="./Day20-Button Ripple/day20.html">Day20-Button Ripple</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day21-Drag N Drop/day21.html">Day21-Drag N Drop</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
