--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@
           <a href="./Day21-Drag N Drop/day21.html">Day21-Drag N Drop</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day22-Drawing App/day22.html">Day22-Drawing App</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
