--- a/index.html
+++ b/index.html
@@ -134,6 +134,11 @@
           <a href="./Day22-Drawing App/day22.html">Day22-Drawing App</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day23-Kinetic CSS loader/day23.html">Day23-Kinetic CSS loader</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
