--- a/index.html
+++ b/index.html
@@ -139,6 +139,11 @@
           <a href="./Day23-Kinetic CSS loader/day23.html">Day23-Kinetic CSS loader</a>
         </p>
       </li>
+      <li>
+        <p>
+          <Day24-Content href="./Day24-Content Placeholder/day24.html">Day24-Content Placeholder</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
