--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
           >
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day25-Sticky Navbar/day25.html">Day25-Sticky Navbar</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
