--- a/index.html
+++ b/index.html
@@ -153,6 +153,13 @@
           <a href="./Day25-Sticky Navbar/day25.html">Day25-Sticky Navbar</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day26-Double Vertical Slider/index26.html"
+            >Day26-Double Vertical Slider</a
+          >
+        </p>
+      </li>
     </ul>
   </body>
 </html>
