--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
           >
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day28-Github Profile/day28.html">Day28-Github Profile</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
