--- a/index.html
+++ b/index.html
@@ -172,6 +172,13 @@
           <a href="./Day28-Github Profile/day28.html">Day28-Github Profile</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day29-Double Heart Click/Day29.html"
+            >Day29-Double Heart Click</a
+          >
+        </p>
+      </li>
     </ul>
   </body>
 </html>
