--- a/index.html
+++ b/index.html
@@ -179,6 +179,13 @@
           >
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day30-Auto Text Effect/day30.html"
+            >Day30-Auto Text Effect</a
+          >
+        </p>
+      </li>
     </ul>
   </body>
 </html>
