--- a/index.html
+++ b/index.html
@@ -186,6 +186,13 @@
           >
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day31-Password Generator/day31.html"
+            >Day31-Password Generator</a
+          >
+        </p>
+      </li>
     </ul>
   </body>
 </html>
