--- a/index.html
+++ b/index.html
@@ -193,6 +193,13 @@
           >
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day32- Good, Cheap, Fast CheckBoxes/day32.html"
+            >Day32- Good, Cheap, Fast CheckBoxes</a
+          >
+        </p>
+      </li>
     </ul>
   </body>
 </html>
