--- a/index.html
+++ b/index.html
@@ -200,6 +200,11 @@
           >
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day33-Notes App/day33.html">Day33-Notes App</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
