--- a/index.html
+++ b/index.html
@@ -205,6 +205,13 @@
           <a href="./Day33-Notes App/day33.html">Day33-Notes App</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day34-Animated Countdown/day34.html"
+            >Day34-Animated Countdown</a
+          >
+        </p>
+      </li>
     </ul>
   </body>
 </html>
