--- a/index.html
+++ b/index.html
@@ -212,6 +212,11 @@
           >
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day35-Image Carousel/day35.html">Day35-Image Carousel</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
