--- a/index.html
+++ b/index.html
@@ -217,6 +217,11 @@
           <a href="./Day35-Image Carousel/day35.html">Day35-Image Carousel</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day36-Hoverboard/day36.html">Day36-Hoverboard</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
