--- a/index.html
+++ b/index.html
@@ -222,6 +222,11 @@
           <a href="./Day36-Hoverboard/day36.html">Day36-Hoverboard</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day37-Pokedex/day37.html">Day37-Pokedex</a>
+        </p>
+      </li>
     </ul>
   </body>
 </html>
