--- a/index.html
+++ b/index.html
@@ -227,6 +227,13 @@
           <a href="./Day37-Pokedex/day37.html">Day37-Pokedex</a>
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day38-Mobile Tab Navigation/day38.html"
+            >Day38-Mobile Tab Navigation</a
+          >
+        </p>
+      </li>
     </ul>
   </body>
 </html>
