--- a/index.html
+++ b/index.html
@@ -234,6 +234,13 @@
           >
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day39-Password Strength Background/day39.html"
+            >Day39-Password Strength Background</a
+          >
+        </p>
+      </li>
     </ul>
   </body>
 </html>
