--- a/index.html
+++ b/index.html
@@ -241,6 +241,13 @@
           >
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day40-3D Boxes Background/day40.html"
+            >Day40-3D Boxes Background</a
+          >
+        </p>
+      </li>
     </ul>
   </body>
 </html>
