--- a/index.html
+++ b/index.html
@@ -248,6 +248,13 @@
           >
         </p>
       </li>
+      <li>
+        <p>
+          <a href="./Day41-Verify Account UI/day41.html"
+            >Day41-Verify Account UI</a
+          >
+        </p>
+      </li>
     </ul>
   </body>
 </html>
