--- a/index.html
+++ b/index.html
@@ -248,10 +248,71 @@
           >
         </p>
       </li>
-      <li>
+      <ul>
         <p>
           <a href="./Day41-Verify Account UI/day41.html"
             >Day41-Verify Account UI</a
+          >
+        </p>
+      </ul>
+      li>
+
+      <li>
+        <p>
+          <a href="./Day42-live user filter/day42.html"
+            >Day42-live user filter</a
+          >
+        </p>
+      </li>
+      <li>
+        <p>
+          <a href="./Day43-feedback ui design/day43.html"
+            >Day43-feedback ui design</a
+          >
+        </p>
+      </li>
+      <li>
+        <p>
+          <a href="./Day44-custom range slider/day44.html"
+            >Day44-custom range slider</a
+          >
+        </p>
+      </li>
+      <li>
+        <p>
+          <a href="./Day45-netflix mobile navigation/day45.html"
+            >Day45-netflix mobile navigation</a
+          >
+        </p>
+      </li>
+      <li>
+        <p>
+          <a href="./Day46-quiz app/day46.html">Day46-quiz app</a>
+        </p>
+      </li>
+      <li>
+        <p>
+          <a href="./Day47-testimonial box switcher/day47.html"
+            >Day47-testimonial box switcher</a
+          >
+        </p>
+      </li>
+      <li>
+        <p>
+          <a href="./Day48-random image generator/day48.html"
+            >Day48-random image generator</a
+          >
+        </p>
+      </li>
+      <li>
+        <p>
+          <a href="./Day49-todo list/day49.html">Day49-todo list</a>
+        </p>
+      </li>
+      <li>
+        <p>
+          <a href="./Day50-insect catch game/day50.html"
+            >Day50-insect catch game</a
           >
         </p>
       </li>
